--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 </head>
 
 <body>
-    <header>
-
+    <header class="max-w-[1140px] mx-auto">
         <!-- nav section-->
-        <nav class="inter flex items-center justify-evenly md:justify-between max-w-[1140px] mx-auto mt-[30px]">
+        <nav class="inter flex items-center justify-evenly md:justify-between mt-[30px]">
             <img class="w-16 md:w-[135px] mr-16" src="assets/logo.png" alt="">
             <div>
                 <ul class="flex gap-12">
@@ -26,7 +25,15 @@
             </div>
         </nav>
 
-
+        <!-- hero section -->
+        <div class="flex flex-col-reverse md:flex-row md:items-end mt-7 md:mt-30 gap-[13px] md:gap-0">
+            <div class="max-w-[570px] mx-4 md:mx-auto">
+                <h1 class="noto-serif font-bold text-2xl md:text-[65px]">ALWAYS <span class="text-[#E95A08]">FRESH <br> FLOWERS
+                </span></h1>
+                <p class="inter text-black/50 text-[14px] md:text-[22px]">Indulge your senses with the beauty and fragrance of our fresh flower shop. Fromclassic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+            </div>
+            <img src="assets/hero-flower.png" alt="">
+        </div>
     </header>
 
     <main>
