--- a/index.html
+++ b/index.html
@@ -28,15 +28,31 @@
         <!-- hero section -->
         <div class="flex flex-col-reverse md:flex-row md:items-end mt-7 md:mt-30 gap-[13px] md:gap-0">
             <div class="max-w-[570px] mx-4 md:mx-auto">
-                <h1 class="noto-serif font-bold text-2xl md:text-[65px]">ALWAYS <span class="text-[#E95A08]">FRESH <br> FLOWERS
-                </span></h1>
-                <p class="inter text-black/50 text-[14px] md:text-[22px]">Indulge your senses with the beauty and fragrance of our fresh flower shop. Fromclassic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+                <h1 class="noto-serif font-bold text-2xl md:text-[65px]">ALWAYS <span class="text-[#E95A08]">FRESH <br>
+                        FLOWERS
+                    </span></h1>
+                <p class="inter text-black/50 text-[14px] md:text-[22px]">Indulge your senses with the beauty and
+                    fragrance of our fresh flower shop. Fromclassic roses to exotic blooms, we offer a wide variety of
+                    fresh flowers that are perfect for any occasion. </p>
             </div>
             <img src="assets/hero-flower.png" alt="">
         </div>
     </header>
 
-    <main>
+    <main class="max-w-[1140px] mx-auto">
+        <!-- plant section -->
+        <section class="mt-16 md:mt-30">
+            <div class="text-center noto-serif">
+                <h1 class="font-bold text-2xl md:text-[50px]"><span class="text-[#E95A08]">Our</span> Plants</h1>
+                <p class="inter max-w-[336px] md:max-w-[888px] mx-auto text-black/50 mb-[50px] text-[14px] md:text-[22px]">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to
+                exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+
+            <!-- card-container -->
+            <div>
+
+            </div>
+        </section>
 
     </main>
 
