plant-lover-section

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
         <!-- hero section -->
         <div class="flex flex-col-reverse md:flex-row md:items-end mt-7 md:mt-30 gap-[13px] md:gap-0">
             <div class="max-w-[570px] mx-4 md:mx-auto">
-                <h1 class="noto-serif font-bold text-2xl md:text-[65px]">ALWAYS <span class="text-[#E95A08]">FRESH <br>
-                        FLOWERS
-                    </span></h1>
+                <h1 class="noto-serif font-bold text-2xl md:text-[65px]">ALWAYS <span class="text-[#E95A08]">FRESH <br>FLOWERS</span></h1>
                 <p class="inter text-black/50 text-[14px] md:text-[22px]">Indulge your senses with the beauty and
                     fragrance of our fresh flower shop. Fromclassic roses to exotic blooms, we offer a wide variety of
                     fresh flowers that are perfect for any occasion. </p>
@@ -39,21 +37,114 @@
         </div>
     </header>
 
-    <main class="max-w-[1140px] mx-auto">
+    <main class="max-w-[1140px] content-center md:mx-auto">
         <!-- plant section -->
         <section class="mt-16 md:mt-30">
             <div class="text-center noto-serif">
                 <h1 class="font-bold text-2xl md:text-[50px]"><span class="text-[#E95A08]">Our</span> Plants</h1>
-                <p class="inter max-w-[336px] md:max-w-[888px] mx-auto text-black/50 mb-[50px] text-[14px] md:text-[22px]">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to
-                exotic blooms, we offer a wide variety of fresh.</p>
-            </div>
-
-            <!-- card-container -->
-            <div>
-
+                <p
+                    class="inter max-w-[336px] md:max-w-[888px] mx-auto text-black/50 mb-7 md:mb-[50px] text-[14px] md:text-[22px]">
+                    Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to
+                    exotic blooms, we offer a wide variety of fresh.</p>
             </div>
         </section>
 
+        <!-- card-container section -->
+        <section class="grid grid-cols-2 md:grid-cols-4 gap-x-5 gap-y-[28.5px] mr-[17px] ml-[14px] mb-[41.5px]  md:mb-[210.12px]">    
+            <!-- card 1 -->
+            <div class="inter text-center w-[171px] md:w-[270px]">
+                <img src="assets/sample-flower-image.png" alt="">
+                <div class="my-[30px]">
+                    <h5 class="font-medium text-[16px] text-[#111111]">Lily Blossom</h5>
+                    <h5 class="font-bold text-[16px] text-[#111111]">20 USD</h5>
+                </div>
+                <button class="inter bg-[#E95A08] w-full text-white px-[30px] py-[19px]">ADD TO CART</button>
+            </div>
+
+            <!-- card 2 -->
+            <div class="inter text-center w-[171px] md:w-[270px]">
+                <img src="assets/sample-flower-image.png" alt="">
+                <div class="my-[30px]">
+                    <h5 class="font-medium text-[16px] text-[#111111]">Lily Blossom</h5>
+                    <h5 class="font-bold text-[16px] text-[#111111]">20 USD</h5>
+                </div>
+                <button class="inter bg-[#E95A08] w-full text-white px-[30px] py-[19px]">ADD TO CART</button>
+            </div>
+
+            <!-- card 3 -->
+            <div class="inter text-center w-[171px] md:w-[270px]">
+                <img src="assets/sample-flower-image.png" alt="">
+                <div class="my-[30px]">
+                    <h5 class="font-medium text-[16px] text-[#111111]">Lily Blossom</h5>
+                    <h5 class="font-bold text-[16px] text-[#111111]">20 USD</h5>
+                </div>
+                <button class="inter bg-[#E95A08] w-full text-white px-[30px] py-[19px]">ADD TO CART</button>
+            </div>
+
+            <!-- card 4 -->
+            <div class="inter text-center w-[171px] md:w-[270px]">
+                <img src="assets/sample-flower-image.png" alt="">
+                <div class="my-[30px]">
+                    <h5 class="font-medium text-[16px] text-[#111111]">Lily Blossom</h5>
+                    <h5 class="font-bold text-[16px] text-[#111111]">20 USD</h5>
+                </div>
+                <button class="inter bg-[#E95A08] w-full text-white px-[30px] py-[19px]">ADD TO CART</button>
+            </div>
+
+            <!-- card 5 -->
+            <div class="inter text-center w-[171px] md:w-[270px]">
+                <img src="assets/sample-flower-image.png" alt="">
+                <div class="my-[30px]">
+                    <h5 class="font-medium text-[16px] text-[#111111]">Lily Blossom</h5>
+                    <h5 class="font-bold text-[16px] text-[#111111]">20 USD</h5>
+                </div>
+                <button class="inter bg-[#E95A08] w-full text-white px-[30px] py-[19px]">ADD TO CART</button>
+            </div>
+
+            <!-- card 6 -->
+            <div class="inter text-center w-[171px] md:w-[270px]">
+                <img src="assets/sample-flower-image.png" alt="">
+                <div class="my-[30px]">
+                    <h5 class="font-medium text-[16px] text-[#111111]">Lily Blossom</h5>
+                    <h5 class="font-bold text-[16px] text-[#111111]">20 USD</h5>
+                </div>
+                <button class="inter bg-[#E95A08] w-full text-white px-[30px] py-[19px]">ADD TO CART</button>
+            </div>
+
+            <!-- card 7 -->
+            <div class="inter text-center w-[171px] md:w-[270px] hidden md:block">
+                <img src="assets/sample-flower-image.png" alt="">
+                <div class="my-[30px]">
+                    <h5 class="font-medium text-[16px] text-[#111111]">Lily Blossom</h5>
+                    <h5 class="font-bold text-[16px] text-[#111111]">20 USD</h5>
+                </div>
+                <button class="inter bg-[#E95A08] w-full text-white px-[30px] py-[19px]">ADD TO CART</button>
+            </div>
+
+            <!-- card 8 -->
+            <div class="inter text-center w-[171px] md:w-[270px] hidden md:block">
+                <img src="assets/sample-flower-image.png" alt="">
+                <div class="my-[30px]">
+                    <h5 class="font-medium text-[16px] text-[#111111]">Lily Blossom</h5>
+                    <h5 class="font-bold text-[16px] text-[#111111]">20 USD</h5>
+                </div>
+                <button class="inter bg-[#E95A08] w-full text-white px-[30px] py-[19px]">ADD TO CART</button>
+            </div>
+        </section>
+
+        <!-- plant lover section -->
+         <div class="md:flex md:items-center gap-12 mr-[15px] ml-[17px]">
+            <img class="" src="assets/flower-store.png" alt="">
+            <div>
+                <h1 class="noto-serif font-bold text-2xl md:text-[50px] mt-[18px] mb-4">Flower & Plants Lover</h1>
+                <ul class="inter list-disc mr-[15px] ml-[17px] text-[14px] md:text-[22px] text-black/50">
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                </ul>
+            </div>
+         </div>
+         <img class="hidden md:block w-[286px] h-[286px] mt-[-720px] ml-[350px]" src="assets/trusted-badge.png" alt="">
     </main>
 
     <footer>
