--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </div>
 
             <div class="md:flex md:gap-7 mx-4">
-                <div>
+                <div class="flex flex-wrap justify-center">
                     <div>
                         <img class="rounded-[14px] mb-5" src="assets/deal-bloom.png" alt="">
                         <div class="w-[270px] ml-[49px] mr-[47px] absolute mt-[-150px] text-white text-center">
@@ -187,7 +187,7 @@
                 <div>
                     <img class="rounded-[14px] mb-5" src="assets/deal-zabo.png" alt="">
                     <div
-                        class="w-[350px] md:w-[498px] ml:[49px] md:ml-[120px] mr-[42px] md:mr-[58px] absolute mt-[-150px] md:mt-[-250px] text-white text-center ">
+                        class="w-[350px] md:w-[498px] ml:[49px] md:ml-[50px] mr-[42px] md:mr-[58px] absolute mt-[-150px] md:mt-[-250px] text-white text-center ">
                         <h3 class="text-center noto-serif font-bold text-xl md:text-[40px]">25% Off | Zabo Plant</h3>
                         <a class="inter font-semibold text-[16px] md:text-[28px] underline" href="">Shop Now</a>
                     </div>
@@ -198,9 +198,9 @@
     </main>
 
     <!-- join section -->
-    <section>
+    <section class="mb-[50px]">
         <div
-            class="bg-[url(/assets/news-letter-bg.png)] h-[300px] md:h-[533px] bg-cover bg-center pt-[110px] px-[15px] md:px-[305px] content-center">
+            class="bg-[url(/assets/news-letter-bg.png)] w-full h-[300px] md:h-[533px] bg-cover bg-center bg-no-repeat content-center">
 
             <h3 class="noto-serif text-white text-center font-bold text-xl md:text-[50px] mb-[23px]">Join the colorful Bunch</h3>
 
@@ -212,10 +212,36 @@
         </div>
     </section>
 
+    <footer class="md:flex  w-[360px] md:w-[1120px] md:mx-auto md:justify-between mr-[14px] ml-5 md:my[50px]">
+        <div class="md:w-[360px] md:h-[180px]">
+            <img class="mb-4" src="assets/logo.png" alt="">
+            <p class="inter mb-5 text-[16px] text-black/50">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+        </div>
 
-
-    <footer>
-
+        <div class="inter text-[16px 0] text-[#6B7280] mb-5">
+            <ul>
+                <li class="mb-8"><a href="">Home</a></li>
+                <li class="mb-8"><a href="">About Us</a></li>
+                <li class="mb-8"><a href="">Blog</a></li>
+                <li class="mb-8"><a href="">FAQ</a></li>
+                <li class="mb-8"><a href="">Contact Us</a></li>
+            </ul>
+        </div>
+        <div class="inter text-[16px 0] text-[#6B7280] mb-5">
+            <ul>
+                <li class="mb-8"><a href="">Features</a></li>
+                <li class="mb-8"><a href="">Pricing</a></li>
+                <li class="mb-8"><a href="">Privacy Policy</a></li>
+                <li class="mb-8"><a href="">Terms of Service</a></li>
+                <li class="mb-8"><a href="">Help Center</a></li>
+            </ul>
+        </div>
+        <div class="flex md:w-[216px] md:h-[36px]">
+            <img class="mr-6" src="assets/icon-linkedin.png" alt=""><a href=""></a></img>
+            <img class="mr-6" src="assets/icon-twitter.png" alt=""><a href=""></a></img>
+            <img class="mr-6" src="assets/icon-facebook.png" alt=""><a href=""></a></img>
+            <img class="mr-6" src="assets/icon-youtube.png" alt=""><a href=""></a></img>
+        </div>
     </footer>
 </body>
 
