--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <!-- join section -->
     <section class="mb-[50px]">
         <div
-            class="bg-[url('../assets/news-letter-bg.png')] w-full h-[300px] md:h-[533px] bg-cover bg-center bg-no-repeat content-center">
+            class="bg-[url('./assets/news-letter-bg.png')] w-full h-[300px] md:h-[533px] bg-cover bg-center bg-no-repeat content-center">
 
             <h3 class="noto-serif text-white text-center font-bold text-xl md:text-[50px] mb-[23px]">Join the colorful Bunch</h3>
 
